--- a/src/main/resources/templates/etc/password.html
+++ b/src/main/resources/templates/etc/password.html
@@ -25,9 +25,10 @@
             <div class="mb-3">
                 <label for="password-input" class="form-label">새로운 비밀번호</label>
                 <input type="password" class="form-control" id="password-input" name="password">
-                <div class="invalid-feedback" id="password-input-invalid-1">비밀번호의 길이는 8 ~ 16 사이여야 합니다.</div>
+                <div class="invalid-feedback" id="password-input-invalid-1">비밀번호의 길이는 10 ~ 20 사이여야 합니다.</div>
                 <div class="invalid-feedback" id="password-input-invalid-2">비밀번호는 공백 없이 입력해주세요.</div>
                 <div class="invalid-feedback" id="password-input-invalid-3">비밀번호는 숫자와 영문, 특수문자로만 구성되어야 합니다.</div>
+                <div class="invalid-feedback" id="password-input-invalid-4">비밀번호는 숫자와 영문을 포함해야 합니다.</div>
             </div>
             <div class="mb-3">
                 <label for="passwordCheck-input" class="form-label">새로운 비밀번호 확인</label>
